Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-7970-gf932537 https://github.com/reactos/reactos/commit/f9325370f53560b96cc7d92d7ab34f578b12dc8e
Description
reactos-livecd-0.4.15-dev-7989-g35dc2f2-x86-gcc-lin-dbg
reactos-livecd-0.4.15-dev-7969-gc9864da-x86-gcc-lin-dbg
reactos-livecd-0.4.15-dev-7970-gf932537-x86-gcc-lin-dbg
Guilty commit : https://github.com/reactos/reactos/commit/f9325370f53560b96cc7d92d7ab34f578b12dc8e from https://github.com/reactos/reactos/pull/6776 by whindsaks
While retesting CORE-15721
- Open explorer
- Open Folder pane
- Right click on a folder
"Rename" context menu item is missing
Expected result : "Rename" contenu menu item, below "Delete"

Attachments
Issue Links
- blocks
-
CORE-15721 explorer filebrowser, it is impossible to select "rename" operation from context menu within the treeview
-
- Resolved
-
-
CORE-19613 Explorer : "Rename" from "Folder" pane only work once
-
- Resolved
-
- relates to
-
CORE-18839 It shall not be possible to rename "my network places" to "" (empty string) from Folder pane
-
- Resolved
-